src/parser/parser.output
Terminals unused in grammar

   OPERATOR


Grammar

    0 $accept: sql $end

    1 sql: command
    2    | sql ';' command

    3 command: /* empty */
    4        | SHOW DATABASES
    5        | CREATE DATABASE IDENTIFIER
    6        | DROP DATABASE IDENTIFIER
    7        | USE DATABASE IDENTIFIER
    8        | SHOW DATABASE IDENTIFIER
    9        | SHOW TABLES
   10        | SHOW TABLE IDENTIFIER
   11        | SELECT '*' FROM tableList whereclause
   12        | SELECT attributes FROM tableList whereclause
   13        | SELECT attributes FROM tableList whereclause GROUP IDENTIFIER
   14        | INSERT INTO IDENTIFIER VALUES valueLists
   15        | UPDATE IDENTIFIER SET setList whereclause
   16        | DELETE FROM IDENTIFIER whereclause
   17        | CREATE TABLE IDENTIFIER '(' column_decs tb_opt_exist ')'
   18        | DROP TABLE IDENTIFIER
   19        | DESC IDENTIFIER
   20        | CREATE INDEX IDENTIFIER '(' attribute ')'
   21        | DROP INDEX IDENTIFIER '(' attribute ')'
   22        | DESC

   23 valueLists: '(' constvalues ')'
   24           | valueLists ',' '(' constvalues ')'

   25 setList: attribute EQ expr
   26        | setList ',' attribute EQ expr

   27 column_decs: column_dec
   28            | column_decs ',' column_dec

   29 column_dec: IDENTIFIER column_type type_width column_constraints

   30 column_list: IDENTIFIER
   31            | column_list ',' IDENTIFIER

   32 column_type: KINT
   33            | KCHAR
   34            | KVARCHAR
   35            | KFLOAT
   36            | KDATE

   37 type_width: '(' INTEGER ')'
   38           | /* empty */

   39 column_constraints: column_constraints column_constraint
   40                   | /* empty */

   41 column_constraint: NOTNULL

   42 tb_opt_exist: ',' tb_opt_decs
   43             | /* empty */

   44 tb_opt_decs: tb_opt_dec
   45            | tb_opt_decs ',' tb_opt_dec

   46 tb_opt_dec: FOREIGN '(' IDENTIFIER ')' REFERENCES IDENTIFIER '(' IDENTIFIER ')'
   47           | PRIMARY '(' column_list ')'
   48           | CHECK '(' IDENTIFIER IN '(' constvalues ')' ')'

   49 attributes: attribute
   50           | attributes ',' attribute

   51 attribute: IDENTIFIER
   52          | SUM '(' IDENTIFIER ')'
   53          | AVG '(' IDENTIFIER ')'
   54          | MIN '(' IDENTIFIER ')'
   55          | MAX '(' IDENTIFIER ')'
   56          | IDENTIFIER '.' IDENTIFIER
   57          | SUM '(' IDENTIFIER '.' IDENTIFIER ')'
   58          | AVG '(' IDENTIFIER '.' IDENTIFIER ')'
   59          | MAX '(' IDENTIFIER '.' IDENTIFIER ')'
   60          | MIN '(' IDENTIFIER '.' IDENTIFIER ')'

   61 tableList: IDENTIFIER
   62          | tableList ',' IDENTIFIER

   63 whereclause: WHERE conditions
   64            | /* empty */

   65 conditions: comparison
   66           | conditions AND comparison

   67 comparison: expr EQ expr
   68           | expr GT expr
   69           | expr LT expr
   70           | expr GE expr
   71           | expr LE expr
   72           | expr NE expr
   73           | expr LIKE expr
   74           | expr IS T_NULL

   75 constvalues: constvalue
   76            | constvalues ',' constvalue

   77 expr: expr '+' factor
   78     | expr '-' factor
   79     | factor

   80 factor: factor '*' value
   81       | factor '/' value
   82       | value

   83 value: constvalue
   84      | attribute
   85      | '-' value
   86      | '(' expr ')'

   87 constvalue: INTEGER
   88           | FLOAT
   89           | STRING
   90           | T_NULL


Terminals, with rules where they appear

$end (0) 0
'(' (40) 17 20 21 23 24 37 46 47 48 52 53 54 55 57 58 59 60 86
')' (41) 17 20 21 23 24 37 46 47 48 52 53 54 55 57 58 59 60 86
'*' (42) 11 80
'+' (43) 77
',' (44) 24 26 28 31 42 45 50 62 76
'-' (45) 78 85
'.' (46) 56 57 58 59 60
'/' (47) 81
';' (59) 2
error (256)
SELECT (258) 11 12 13
DELETE (259) 16
UPDATE (260) 15
INSERT (261) 14
CREATE (262) 5 17 20
DROP (263) 6 18 21
USE (264) 7
SHOW (265) 4 8 9 10
TABLES (266) 9
DATABASES (267) 4
DATABASE (268) 5 6 7 8
TABLE (269) 10 17 18
FROM (270) 11 12 13 16
WHERE (271) 63
OPERATOR (272)
VALUES (273) 14
SET (274) 15
INTO (275) 14
KINT (276) 32
KCHAR (277) 33
KFLOAT (278) 35
KVARCHAR (279) 34
KDATE (280) 36
PRIMARY (281) 47
FOREIGN (282) 46
REFERENCES (283) 46
INTEGER (284) 37 87
FLOAT (285) 88
STRING (286) 89
IDENTIFIER (287) 5 6 7 8 10 13 14 15 16 17 18 19 20 21 29 30 31 46
    48 51 52 53 54 55 56 57 58 59 60 61 62
EQ (288) 25 26 67
GT (289) 68
LT (290) 69
GE (291) 70
LE (292) 71
NE (293) 72
AVG (294) 53 58
SUM (295) 52 57
MIN (296) 54 60
MAX (297) 55 59
NOTNULL (298) 41
DESC (299) 19 22
GROUP (300) 13
LIKE (301) 73
INDEX (302) 20 21
CHECK (303) 48
IN (304) 48
T_NULL (305) 74 90
IS (306) 74
AND (307) 66


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
sql (63)
    on left: 1 2, on right: 0 2
command (64)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22,
    on right: 1 2
valueLists (65)
    on left: 23 24, on right: 14 24
setList (66)
    on left: 25 26, on right: 15 26
column_decs (67)
    on left: 27 28, on right: 17 28
column_dec (68)
    on left: 29, on right: 27 28
column_list (69)
    on left: 30 31, on right: 31 47
column_type (70)
    on left: 32 33 34 35 36, on right: 29
type_width (71)
    on left: 37 38, on right: 29
column_constraints (72)
    on left: 39 40, on right: 29 39
column_constraint (73)
    on left: 41, on right: 39
tb_opt_exist (74)
    on left: 42 43, on right: 17
tb_opt_decs (75)
    on left: 44 45, on right: 42 45
tb_opt_dec (76)
    on left: 46 47 48, on right: 44 45
attributes (77)
    on left: 49 50, on right: 12 13 50
attribute (78)
    on left: 51 52 53 54 55 56 57 58 59 60, on right: 20 21 25 26 49
    50 84
tableList (79)
    on left: 61 62, on right: 11 12 13 62
whereclause (80)
    on left: 63 64, on right: 11 12 13 15 16
conditions (81)
    on left: 65 66, on right: 63 66
comparison (82)
    on left: 67 68 69 70 71 72 73 74, on right: 65 66
constvalues (83)
    on left: 75 76, on right: 23 24 48 76
expr (84)
    on left: 77 78 79, on right: 25 26 67 68 69 70 71 72 73 74 77 78
    86
factor (85)
    on left: 80 81 82, on right: 77 78 79 80 81
value (86)
    on left: 83 84 85 86, on right: 80 81 82 85
constvalue (87)
    on left: 87 88 89 90, on right: 75 76 83


state 0

    0 $accept: . sql $end

    SELECT  shift, and go to state 1
    DELETE  shift, and go to state 2
    UPDATE  shift, and go to state 3
    INSERT  shift, and go to state 4
    CREATE  shift, and go to state 5
    DROP    shift, and go to state 6
    USE     shift, and go to state 7
    SHOW    shift, and go to state 8
    DESC    shift, and go to state 9

    $default  reduce using rule 3 (command)

    sql      go to state 10
    command  go to state 11


state 1

   11 command: SELECT . '*' FROM tableList whereclause
   12        | SELECT . attributes FROM tableList whereclause
   13        | SELECT . attributes FROM tableList whereclause GROUP IDENTIFIER

    IDENTIFIER  shift, and go to state 12
    AVG         shift, and go to state 13
    SUM         shift, and go to state 14
    MIN         shift, and go to state 15
    MAX         shift, and go to state 16
    '*'         shift, and go to state 17

    attributes  go to state 18
    attribute   go to state 19


state 2

   16 command: DELETE . FROM IDENTIFIER whereclause

    FROM  shift, and go to state 20


state 3

   15 command: UPDATE . IDENTIFIER SET setList whereclause

    IDENTIFIER  shift, and go to state 21


state 4

   14 command: INSERT . INTO IDENTIFIER VALUES valueLists

    INTO  shift, and go to state 22


state 5

    5 command: CREATE . DATABASE IDENTIFIER
   17        | CREATE . TABLE IDENTIFIER '(' column_decs tb_opt_exist ')'
   20        | CREATE . INDEX IDENTIFIER '(' attribute ')'

    DATABASE  shift, and go to state 23
    TABLE     shift, and go to state 24
    INDEX     shift, and go to state 25


state 6

    6 command: DROP . DATABASE IDENTIFIER
   18        | DROP . TABLE IDENTIFIER
   21        | DROP . INDEX IDENTIFIER '(' attribute ')'

    DATABASE  shift, and go to state 26
    TABLE     shift, and go to state 27
    INDEX     shift, and go to state 28


state 7

    7 command: USE . DATABASE IDENTIFIER

    DATABASE  shift, and go to state 29


state 8

    4 command: SHOW . DATABASES
    8        | SHOW . DATABASE IDENTIFIER
    9        | SHOW . TABLES
   10        | SHOW . TABLE IDENTIFIER

    TABLES     shift, and go to state 30
    DATABASES  shift, and go to state 31
    DATABASE   shift, and go to state 32
    TABLE      shift, and go to state 33


state 9

   19 command: DESC . IDENTIFIER
   22        | DESC .

    IDENTIFIER  shift, and go to state 34

    $default  reduce using rule 22 (command)


state 10

    0 $accept: sql . $end
    2 sql: sql . ';' command

    $end  shift, and go to state 35
    ';'   shift, and go to state 36


state 11

    1 sql: command .

    $default  reduce using rule 1 (sql)


state 12

   51 attribute: IDENTIFIER .
   56          | IDENTIFIER . '.' IDENTIFIER

    '.'  shift, and go to state 37

    $default  reduce using rule 51 (attribute)


state 13

   53 attribute: AVG . '(' IDENTIFIER ')'
   58          | AVG . '(' IDENTIFIER '.' IDENTIFIER ')'

    '('  shift, and go to state 38


state 14

   52 attribute: SUM . '(' IDENTIFIER ')'
   57          | SUM . '(' IDENTIFIER '.' IDENTIFIER ')'

    '('  shift, and go to state 39


state 15

   54 attribute: MIN . '(' IDENTIFIER ')'
   60          | MIN . '(' IDENTIFIER '.' IDENTIFIER ')'

    '('  shift, and go to state 40


state 16

   55 attribute: MAX . '(' IDENTIFIER ')'
   59          | MAX . '(' IDENTIFIER '.' IDENTIFIER ')'

    '('  shift, and go to state 41


state 17

   11 command: SELECT '*' . FROM tableList whereclause

    FROM  shift, and go to state 42


state 18

   12 command: SELECT attributes . FROM tableList whereclause
   13        | SELECT attributes . FROM tableList whereclause GROUP IDENTIFIER
   50 attributes: attributes . ',' attribute

    FROM  shift, and go to state 43
    ','   shift, and go to state 44


state 19

   49 attributes: attribute .

    $default  reduce using rule 49 (attributes)


state 20

   16 command: DELETE FROM . IDENTIFIER whereclause

    IDENTIFIER  shift, and go to state 45


state 21

   15 command: UPDATE IDENTIFIER . SET setList whereclause

    SET  shift, and go to state 46


state 22

   14 command: INSERT INTO . IDENTIFIER VALUES valueLists

    IDENTIFIER  shift, and go to state 47


state 23

    5 command: CREATE DATABASE . IDENTIFIER

    IDENTIFIER  shift, and go to state 48


state 24

   17 command: CREATE TABLE . IDENTIFIER '(' column_decs tb_opt_exist ')'

    IDENTIFIER  shift, and go to state 49


state 25

   20 command: CREATE INDEX . IDENTIFIER '(' attribute ')'

    IDENTIFIER  shift, and go to state 50


state 26

    6 command: DROP DATABASE . IDENTIFIER

    IDENTIFIER  shift, and go to state 51


state 27

   18 command: DROP TABLE . IDENTIFIER

    IDENTIFIER  shift, and go to state 52


state 28

   21 command: DROP INDEX . IDENTIFIER '(' attribute ')'

    IDENTIFIER  shift, and go to state 53


state 29

    7 command: USE DATABASE . IDENTIFIER

    IDENTIFIER  shift, and go to state 54


state 30

    9 command: SHOW TABLES .

    $default  reduce using rule 9 (command)


state 31

    4 command: SHOW DATABASES .

    $default  reduce using rule 4 (command)


state 32

    8 command: SHOW DATABASE . IDENTIFIER

    IDENTIFIER  shift, and go to state 55


state 33

   10 command: SHOW TABLE . IDENTIFIER

    IDENTIFIER  shift, and go to state 56


state 34

   19 command: DESC IDENTIFIER .

    $default  reduce using rule 19 (command)


state 35

    0 $accept: sql $end .

    $default  accept


state 36

    2 sql: sql ';' . command

    SELECT  shift, and go to state 1
    DELETE  shift, and go to state 2
    UPDATE  shift, and go to state 3
    INSERT  shift, and go to state 4
    CREATE  shift, and go to state 5
    DROP    shift, and go to state 6
    USE     shift, and go to state 7
    SHOW    shift, and go to state 8
    DESC    shift, and go to state 9

    $default  reduce using rule 3 (command)

    command  go to state 57


state 37

   56 attribute: IDENTIFIER '.' . IDENTIFIER

    IDENTIFIER  shift, and go to state 58


state 38

   53 attribute: AVG '(' . IDENTIFIER ')'
   58          | AVG '(' . IDENTIFIER '.' IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 59


state 39

   52 attribute: SUM '(' . IDENTIFIER ')'
   57          | SUM '(' . IDENTIFIER '.' IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 60


state 40

   54 attribute: MIN '(' . IDENTIFIER ')'
   60          | MIN '(' . IDENTIFIER '.' IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 61


state 41

   55 attribute: MAX '(' . IDENTIFIER ')'
   59          | MAX '(' . IDENTIFIER '.' IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 62


state 42

   11 command: SELECT '*' FROM . tableList whereclause

    IDENTIFIER  shift, and go to state 63

    tableList  go to state 64


state 43

   12 command: SELECT attributes FROM . tableList whereclause
   13        | SELECT attributes FROM . tableList whereclause GROUP IDENTIFIER

    IDENTIFIER  shift, and go to state 63

    tableList  go to state 65


state 44

   50 attributes: attributes ',' . attribute

    IDENTIFIER  shift, and go to state 12
    AVG         shift, and go to state 13
    SUM         shift, and go to state 14
    MIN         shift, and go to state 15
    MAX         shift, and go to state 16

    attribute  go to state 66


state 45

   16 command: DELETE FROM IDENTIFIER . whereclause

    WHERE  shift, and go to state 67

    $default  reduce using rule 64 (whereclause)

    whereclause  go to state 68


state 46

   15 command: UPDATE IDENTIFIER SET . setList whereclause

    IDENTIFIER  shift, and go to state 12
    AVG         shift, and go to state 13
    SUM         shift, and go to state 14
    MIN         shift, and go to state 15
    MAX         shift, and go to state 16

    setList    go to state 69
    attribute  go to state 70


state 47

   14 command: INSERT INTO IDENTIFIER . VALUES valueLists

    VALUES  shift, and go to state 71


state 48

    5 command: CREATE DATABASE IDENTIFIER .

    $default  reduce using rule 5 (command)


state 49

   17 command: CREATE TABLE IDENTIFIER . '(' column_decs tb_opt_exist ')'

    '('  shift, and go to state 72


state 50

   20 command: CREATE INDEX IDENTIFIER . '(' attribute ')'

    '('  shift, and go to state 73


state 51

    6 command: DROP DATABASE IDENTIFIER .

    $default  reduce using rule 6 (command)


state 52

   18 command: DROP TABLE IDENTIFIER .

    $default  reduce using rule 18 (command)


state 53

   21 command: DROP INDEX IDENTIFIER . '(' attribute ')'

    '('  shift, and go to state 74


state 54

    7 command: USE DATABASE IDENTIFIER .

    $default  reduce using rule 7 (command)


state 55

    8 command: SHOW DATABASE IDENTIFIER .

    $default  reduce using rule 8 (command)


state 56

   10 command: SHOW TABLE IDENTIFIER .

    $default  reduce using rule 10 (command)


state 57

    2 sql: sql ';' command .

    $default  reduce using rule 2 (sql)


state 58

   56 attribute: IDENTIFIER '.' IDENTIFIER .

    $default  reduce using rule 56 (attribute)


state 59

   53 attribute: AVG '(' IDENTIFIER . ')'
   58          | AVG '(' IDENTIFIER . '.' IDENTIFIER ')'

    ')'  shift, and go to state 75
    '.'  shift, and go to state 76


state 60

   52 attribute: SUM '(' IDENTIFIER . ')'
   57          | SUM '(' IDENTIFIER . '.' IDENTIFIER ')'

    ')'  shift, and go to state 77
    '.'  shift, and go to state 78


state 61

   54 attribute: MIN '(' IDENTIFIER . ')'
   60          | MIN '(' IDENTIFIER . '.' IDENTIFIER ')'

    ')'  shift, and go to state 79
    '.'  shift, and go to state 80


state 62

   55 attribute: MAX '(' IDENTIFIER . ')'
   59          | MAX '(' IDENTIFIER . '.' IDENTIFIER ')'

    ')'  shift, and go to state 81
    '.'  shift, and go to state 82


state 63

   61 tableList: IDENTIFIER .

    $default  reduce using rule 61 (tableList)


state 64

   11 command: SELECT '*' FROM tableList . whereclause
   62 tableList: tableList . ',' IDENTIFIER

    WHERE  shift, and go to state 67
    ','    shift, and go to state 83

    $default  reduce using rule 64 (whereclause)

    whereclause  go to state 84


state 65

   12 command: SELECT attributes FROM tableList . whereclause
   13        | SELECT attributes FROM tableList . whereclause GROUP IDENTIFIER
   62 tableList: tableList . ',' IDENTIFIER

    WHERE  shift, and go to state 67
    ','    shift, and go to state 83

    $default  reduce using rule 64 (whereclause)

    whereclause  go to state 85


state 66

   50 attributes: attributes ',' attribute .

    $default  reduce using rule 50 (attributes)


state 67

   63 whereclause: WHERE . conditions

    INTEGER     shift, and go to state 86
    FLOAT       shift, and go to state 87
    STRING      shift, and go to state 88
    IDENTIFIER  shift, and go to state 12
    AVG         shift, and go to state 13
    SUM         shift, and go to state 14
    MIN         shift, and go to state 15
    MAX         shift, and go to state 16
    T_NULL      shift, and go to state 89
    '('         shift, and go to state 90
    '-'         shift, and go to state 91

    attribute   go to state 92
    conditions  go to state 93
    comparison  go to state 94
    expr        go to state 95
    factor      go to state 96
    value       go to state 97
    constvalue  go to state 98


state 68

   16 command: DELETE FROM IDENTIFIER whereclause .

    $default  reduce using rule 16 (command)


state 69

   15 command: UPDATE IDENTIFIER SET setList . whereclause
   26 setList: setList . ',' attribute EQ expr

    WHERE  shift, and go to state 67
    ','    shift, and go to state 99

    $default  reduce using rule 64 (whereclause)

    whereclause  go to state 100


state 70

   25 setList: attribute . EQ expr

    EQ  shift, and go to state 101


state 71

   14 command: INSERT INTO IDENTIFIER VALUES . valueLists

    '('  shift, and go to state 102

    valueLists  go to state 103


state 72

   17 command: CREATE TABLE IDENTIFIER '(' . column_decs tb_opt_exist ')'

    IDENTIFIER  shift, and go to state 104

    column_decs  go to state 105
    column_dec   go to state 106


state 73

   20 command: CREATE INDEX IDENTIFIER '(' . attribute ')'

    IDENTIFIER  shift, and go to state 12
    AVG         shift, and go to state 13
    SUM         shift, and go to state 14
    MIN         shift, and go to state 15
    MAX         shift, and go to state 16

    attribute  go to state 107


state 74

   21 command: DROP INDEX IDENTIFIER '(' . attribute ')'

    IDENTIFIER  shift, and go to state 12
    AVG         shift, and go to state 13
    SUM         shift, and go to state 14
    MIN         shift, and go to state 15
    MAX         shift, and go to state 16

    attribute  go to state 108


state 75

   53 attribute: AVG '(' IDENTIFIER ')' .

    $default  reduce using rule 53 (attribute)


state 76

   58 attribute: AVG '(' IDENTIFIER '.' . IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 109


state 77

   52 attribute: SUM '(' IDENTIFIER ')' .

    $default  reduce using rule 52 (attribute)


state 78

   57 attribute: SUM '(' IDENTIFIER '.' . IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 110


state 79
